--- a/index.html
+++ b/index.html
@@ -492,10 +492,12 @@
 									</p>
 									<p class="fw-light mt-1 small">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A B2B application that allows customers to configure and manage file transfers between applications using several protocols, such as PEPPOL, AS4/AS2, FTP, SFTP, HTTPS, and SMTP, as well as produce reports and audit transactions involving file transfers. Administrators can manage users, services and gateways, password policies, and download service logs. The application provides Administrator users and non-admin users whose access can be defined according to their role.
 									</p>
-									<p class="fw-light small mt-1 mb-0">Role &amp; Responsibilities:
+									<p class="fw-light small mt-1 mb-0">Role:
 									</p>
 									<p class="fw-light small mt-1 mb-0">
-									Lead Software Engineer  &nbsp; &bull; &nbsp; 10 members
+									&nbsp;&nbsp;&nbsp;Lead Software Engineer  &nbsp; &bull; &nbsp; 10 members
+									</p>
+									<p class="fw-light small mt-1 mb-0">Responsibilities:
 									</p>
 									<p class="fw-light mt-1 small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Mentoring team members and holding developer meetings
@@ -531,10 +533,12 @@
 									</p>
 									<p class="fw-light mt-1 small">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; A B2B product to ease the corporate organization’s travel and expense division with ERP and Global Distribution System (GDS) integration. The product also features the data analysis portal to provide various ways to highlight the travel and expense reports. Large and small organizations can easily track business travel and expense anytime and anywhere.
 									</p>
-									<p class="fw-light small mt-1 mb-0">Role &amp; Responsibilities:
+									<p class="fw-light small mt-1 mb-0">Role:
 									</p>
 									<p class="fw-light small mt-1 mb-0 ml-1">
-										Developer (Team Member &nbsp; &bull; &nbsp; 12 members)
+									&nbsp;&nbsp;&nbsp;Developer (Team Member &nbsp; &bull; &nbsp; 12 members)
+									</p>
+									<p class="fw-light small mt-1 mb-0">Responsibilities:
 									</p>
 									<p class="fw-light mt-1 small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Analyses and discuss the business requirements.
