--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
 	html {
 	  font-size: 13.176471px;
+	  background-color: #016B61;
 	}
+	
 
 	/* For Letter size */
 
@@ -65,15 +67,28 @@
       background-color: var(--bs-body-bg);
       color: var(--bs-body-color);
     }
+	.body-color {
+		background-color: #1C352D;
+	}
     .resume-section {
       padding: 1rem 0;
     }
     .section-title {
-      border-bottom: 2px solid #dee2e6;
+      border-bottom: 2px solid #A6B28B;
       margin-bottom: 1rem;
       padding-bottom: 0.5rem;
     }
+	.border-start {
+		border-color: #A6B28B !important;
+	}
+	.border-top {
+		border-color: #A6B28B !important;
+		border-top-style: dashed !important;
+	}
     @media print {
+		.customBody {
+			background-color: #FFFFFF;
+		}
 		@page {
 			margin-top: 12px;
 			margin-bottom: 12px;
@@ -180,12 +195,12 @@
 
   </style>
 </head>
-<body class="bg-white">
+<body class="body-color customBody">
 
-<div class="container-lg customizedContainer regular">
+<div class="container-lg customizedContainer bg-white regular">
 	<section class="resume-section">
 	<div class="m-1 d-flex align-items-center">
-		<div class="p-3 me-3 bg-secondary">
+		<div class="p-3 me-3 body-color">
 			<p class="row text-white m-0 text-center bold">J</p>
 			<p class="row text-white m-0 text-center bold">G</p>
 		</div>
@@ -221,7 +236,7 @@
 						<li class="list-group-item mb-0 p-0">OpenText
 								<ul class="list-group-flush">
 								<li class="list-group-item border-start ">
-									<p class="mb-0">Lead Software Engineer
+									<p class="mb-0">Lead Software Engineer<span class="ms-1 p-1 badge bg-success text-white">Current</span>
 									</p>
 									<div class="row">
 										<p class="col-8 text-start fw-light small mb-0" id="currentCompanyExperience">
@@ -231,7 +246,7 @@
 											Bengaluru, India
 										</p>
 									</div>
-									<p class="mb-0 mt-2 border-top">Senior Software Engineer
+									<p class="mb-0 mt-2 border-top border-1">Senior Software Engineer
 									</p>
 									<div class="row">
 										<p class="col-8 text-start fw-light small mb-0">
@@ -452,7 +467,7 @@
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item  mb-0 p-0">Open-Source contribution 
 							<a href="https://play.google.com/store/apps/details?id=org.j_keepass" class="text-decoration-none d-print-none"> 
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 								  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
 								  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
 								</svg>
@@ -478,7 +493,7 @@
 	</div>
 </div>
 <div class="page-break"></div>
-<div class="container-lg customizedContainer regular">
+<div class="container-lg customizedContainer bg-white regular">
 	<div class="row mt-3">
 		<div class="col">
 			<section class="resume-section fade-right-container" style="--delay: 1.8s;">
@@ -577,7 +592,7 @@
 							<li class="list-group-item border-start ">
 								<p class="fw-light  mb-0">
 									<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none d-print-none"> 
-										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-linkedin" viewBox="0 0 16 16">
 											<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
 										</svg>
 									</a>
@@ -594,7 +609,7 @@
 							<li class="list-group-item border-start ">
 								<p class="fw-light  mb-0">
 									<button onclick="window.print()" type="button" class="btn text-decoration-none"> 
-										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 										  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
 										  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
 										</svg>
