--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
 	<div class="row">
 		<div class="col-sm">
 			<section class="resume-section fade-right-container" style="--delay: 0s;">
-				<p class="section-title text-secondary bold">About Me
+				<p class="section-title text-secondary bold">Summary
 				</p>
-				<p class="lh-sm">Experienced Software Engineer with over <span id="totalExperience">12+ years</span> in Java development, skilled in all phases of the software development lifecycle. From Planning, Analysis, Architecture, Design, Problem Solving, Implementation to Deployment. 
+				<p class="lh-sm">Lead Software Engineer with <span id="totalExperience">12+ years</span> of experience designing and delivering enterprise-grade solutions across diverse industries. Skilled in translating complex business requirements into scalable, secure, and maintainable architectures using Java, microservices, and cloud-native technologies.
 				</p>
-				<p class="lh-sm">Proficient in developing B2B software applications. Strong ability to prioritize team tasks, foster collaboration, promote an inclusive work environment. Familiar with Agile methodologies and experienced in Scrum teams. Experience in software applications under B2B information management domain based on several protocols, such as PEPPOL, AS4, AS2, FTP, SFTP, HTTPS, SMTP and more.
+				<p class="lh-sm">Passionate about system design, performance optimization, and driving architectural decisions that align with long-term product vision. On a focused path toward becoming a Technology Architect, with a strong foundation in integration protocols, DevOps practices, and cross-functional collaboration.
 				</p>
 				<p class="lh-sm">
 					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
