--- a/index.html
+++ b/index.html
@@ -236,11 +236,16 @@
 						<li class="list-group-item mb-0 p-0">OpenText
 								<ul class="list-group-flush">
 								<li class="list-group-item border-start ">
-									<p class="mb-0">Lead Software Engineer<span class="ms-1 p-1 badge bg-success text-white">Current</span>
+									<p class="mb-0">Lead Software Engineer
 									</p>
 									<div class="row">
-										<p class="col-8 text-start fw-light small mb-0" id="currentCompanyExperience">
-											03/2023 – present &nbsp; &bull; &nbsp;
+										<p class="col-8 mb-0">
+											<label class="text-start fw-light small">
+												03/2023 –
+											</label>
+											<span class="p-1 badge bg-success text-white">Present</span> &nbsp; &bull; &nbsp;
+											<label class="text-start fw-light small" id="currentCompanyExperience">
+											</label>
 										</p>
 										<p class="col-4 text-end fw-light small mb-0">
 											Bengaluru, India
