--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Resume of Jayesh Bharat Ganatra, Lead Software Engineer">
+  <!-- SEO Meta Tags -->
+<meta name="description" content="Jayesh's professional resume showcasing experience, skills, and projects.">
+<meta name="keywords" content="Jayesh, Resume, Software Engineer, Developer, Portfolio, Projects, Skills, Experience">
+<meta name="author" content="Jayesh">
+<meta property="og:title" content="Jayesh's Resume">
+<meta property="og:description" content="Explore Jayesh's professional resume including experience, skills, and projects.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://jayeshsyif.github.io/resume/">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Jayesh's Resume">
+<meta name="twitter:description" content="Explore Jayesh's professional resume including experience, skills, and projects.">
+
   <title>Resume - Jayesh Bharat Ganatra</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
    <link rel="preconnect" href="https://fonts.googleapis.com">
