--- a/index.html
+++ b/index.html
@@ -624,12 +624,12 @@
 						<ul class="list-group-flush ">
 							<li class="list-group-item border-start ">
 								<p class="fw-light  mb-0">
-									<button onclick="window.print()" type="button" class="btn text-decoration-none"> 
+									<a href="Jayesh_Ganatra_Resume.pdf"class="text-decoration-none"> 
 										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 										  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
 										  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
 										</svg>
-									</button>
+									</a>
 								</p>
 							</li>
 						</ul>
