--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <body class="body-color customBody">
 
 <div class="container-lg customizedContainer bg-white regular">
-	<section class="resume-section">
+	<section class="resume-section" style="--delay: 0s;">
 	<div class="m-1 d-flex align-items-center">
 		<div class="p-3 me-3 body-color">
 			<p class="row text-white m-0 text-center bold">J</p>
@@ -220,7 +220,7 @@
 	</section>
 	<div class="row">
 		<div class="col-sm">
-			<section class="resume-section fade-right-container" style="--delay: 0s;">
+			<section class="resume-section fade-right-container" style="--delay: 0.1s;">
 				<p class="section-title text-secondary bold">Summary
 				</p>
 				<p class="lh-sm">Lead Software Engineer with <span id="totalExperience">12+ years</span> of experience designing and delivering enterprise-grade solutions across diverse industries. Skilled in translating complex business requirements into scalable, secure, and maintainable architectures using Java, microservices, and cloud-native technologies.
