--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <body class="body-color customBody">
 
 <div class="container-lg customizedContainer bg-white regular">
-	<section class="resume-section" style="--delay: 0s;">
+	<section class="resume-section fade-right-container" style="--delay: 0s;">
 	<div class="m-1 d-flex align-items-center">
 		<div class="p-3 me-3 body-color">
 			<p class="row text-white m-0 text-center bold">J</p>
