--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
 <body class="body-color customBody">
 
 <div class="container-lg customizedContainer bg-white regular">
-	<section class="resume-section fade-right-container" style="--delay: 0s;">
+	<section class="resume-section">
 	<div class="m-1 d-flex align-items-center">
 		<div class="p-3 me-3 body-color">
 			<p class="row text-white m-0 text-center bold">J</p>
 			<p class="row text-white m-0 text-center bold">G</p>
 		</div>
-		<h1 class="text-dark text-center">Jayesh Ganatra</h1>
+		<h1 class="text-dark text-center fade-right-container" style="--delay: 0s;">Jayesh Ganatra</h1>
 	</div>
 	</section>
 	<div class="row">
