--- a/index.html
+++ b/index.html
@@ -212,15 +212,15 @@
 	<section class="resume-section">
 	<div class="m-1 d-flex align-items-center">
 		<div class="p-3 me-3 body-color">
-			<p class="row text-white m-0 text-center bold">J</p>
-			<p class="row text-white m-0 text-center bold">G</p>
+			<p class="row text-white m-0 text-center bold fade-right-container" style="--delay: 0s;">J</p>
+			<p class="row text-white m-0 text-center bold fade-right-container" style="--delay: 0s;">G</p>
 		</div>
-		<h1 class="text-dark text-center fade-right-container" style="--delay: 0s;">Jayesh Ganatra</h1>
+		<h1 class="text-dark text-center fade-right-container" style="--delay: 0.3s;">Jayesh Ganatra</h1>
 	</div>
 	</section>
-	<div class="row">
+	<div class="row fade-right-container" style="--delay: 0.6s;">
 		<div class="col-sm">
-			<section class="resume-section fade-right-container" style="--delay: 0.1s;">
+			<section class="resume-section">
 				<p class="section-title text-secondary bold">Summary
 				</p>
 				<p class="lh-sm">Lead Software Engineer with <span id="totalExperience">12+ years</span> of experience designing and delivering enterprise-grade solutions across diverse industries. Skilled in translating complex business requirements into scalable, secure, and maintainable architectures using Java, microservices, and cloud-native technologies.
@@ -241,7 +241,7 @@
 			</section>
 		</div>
 		<div class="col-sm">
-			<section class="resume-section m-0 fade-right-container" style="--delay: 0.3s;">
+			<section class="resume-section m-0">
 				<p class="section-title text-secondary bold">Experience</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item mb-0 p-0">OpenText
@@ -315,9 +315,9 @@
 			</section>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row fade-right-container" style="--delay: 0.9s;">
 		<div class="col-sm">
-			<section class="resume-section fade-right-container" style="--delay: 0.6s;">
+			<section class="resume-section">
 				<p class="section-title text-secondary bold">Skills</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item  mb-0 p-0">Backend
@@ -358,7 +358,7 @@
 			</section>
 		</div>
 		<div class="col-sm">
-			<section class="resume-section fade-right-container" style="--delay: 0.9s;"> 
+			<section class="resume-section"> 
 				<p class="section-title text-secondary bold">Education</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item  mb-0 p-0">Bachelor of Engineering
@@ -435,9 +435,9 @@
 			</section>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row fade-right-container" style="--delay: 1.2s;">
 		<div class="col-sm">
-			<section class="resume-section fade-right-container" style="--delay: 1.2s;">
+			<section class="resume-section">
 				<p class="section-title text-secondary bold">Achievements</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item  mb-0 p-0">Application Certification Completion (Recognition)
@@ -478,7 +478,7 @@
 			</section>
 		</div>
 		<div class="col-sm">
-			<section class="resume-section fade-right-container" style="--delay: 1.5s;">
+			<section class="resume-section">
 				<p class="section-title text-secondary bold">Contribution</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item  mb-0 p-0">Open-Source contribution 
@@ -510,9 +510,9 @@
 </div>
 <div class="page-break"></div>
 <div class="container-lg customizedContainer bg-white regular">
-	<div class="row mt-3">
+	<div class="row mt-3 fade-right-container" style="--delay: 1.5s;">
 		<div class="col">
-			<section class="resume-section fade-right-container" style="--delay: 1.8s;">
+			<section class="resume-section">
 				<p class="section-title text-secondary bold">Projects</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item  mb-0 p-0">BizManager 
@@ -587,7 +587,7 @@
 			</section>
 		</div>
 	</div>
-	<section class="resume-section fade-right-container" style="--delay: 2.1s;">
+	<section class="resume-section fade-right-container" style="--delay: 1.8s;">
 		<p class="section-title d-print-none">Other Details</p>
 		<div class="card-group border-0 d-print-none">
 			<div class="card border-0">
