--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 <div class="container-lg customizedContainer bg-white regular">
 	<section class="resume-section">
 	<div class="m-1 d-flex align-items-center">
-		<div class="p-3 me-3 body-color">
-			<p class="row text-white m-0 text-center bold fade-right-container" style="--delay: 0s;">J</p>
-			<p class="row text-white m-0 text-center bold fade-right-container" style="--delay: 0s;">G</p>
+		<div class="p-3 me-3 body-color fade-right-container" style="--delay: 0s;">
+			<p class="row text-white m-0 text-center bold">J</p>
+			<p class="row text-white m-0 text-center bold">G</p>
 		</div>
 		<h1 class="text-dark text-center fade-right-container" style="--delay: 0.3s;">Jayesh Ganatra</h1>
 	</div>
