--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
       color: var(--bs-body-color);
     }
 	.body-color {
-		background-color: #1C352D;
+		background-color: #DDD0C8;
 	}
     .resume-section {
       padding: 1rem 0;
     }
     .section-title {
-      border-bottom: 2px solid #A6B28B;
+      border-bottom: 2px solid #323232;
       margin-bottom: 1rem;
       padding-bottom: 0.5rem;
     }
 	.border-start {
-		border-color: #A6B28B !important;
+		border-color: #323232 !important;
 	}
 	.border-top {
-		border-color: #A6B28B !important;
+		border-color: #323232 !important;
 		border-top-style: dashed !important;
 	}
     @media print {
