--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 	html {
 	  font-size: 13.176471px;
-	  background-color: #DDD0C8;
+	  background-color: #002349;
 	}
 	
 
@@ -79,21 +79,21 @@
       color: var(--bs-body-color);
     }
 	.body-color {
-		background-color: #DDD0C8;
+		background-color: #002349;
 	}
     .resume-section {
       padding: 1rem 0;
     }
     .section-title {
-      border-bottom: 2px solid #323232;
+      border-bottom: 2px solid #957C3D;
       margin-bottom: 1rem;
       padding-bottom: 0.5rem;
     }
 	.border-start {
-		border-color: #323232 !important;
+		border-color: #957C3D !important;
 	}
 	.border-top {
-		border-color: #323232 !important;
+		border-color: #957C3D !important;
 		border-top-style: dashed !important;
 	}
     @media print {
