--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 	<div class="row fade-right-container" style="--delay: 0.6s;">
 		<div class="col-sm">
 			<section class="resume-section">
-				<p class="section-title text-secondary bold">Summary
+				<p class="section-title text-dark bold">Summary
 				</p>
 				<p class="lh-sm">Lead Software Engineer with <span id="totalExperience">12+ years</span> of experience designing and delivering enterprise-grade solutions across diverse industries. Skilled in translating complex business requirements into scalable, secure, and maintainable architectures using Java, microservices, and cloud-native technologies.
 				</p>
@@ -256,7 +256,7 @@
 		</div>
 		<div class="col-sm">
 			<section class="resume-section m-0">
-				<p class="section-title text-secondary bold">Experience</p>
+				<p class="section-title text-dark bold">Experience</p>
 					<ul class="list-group list-group-flush custom-color-2">
 						<li class="list-group-item mb-0 p-0 custom-color-2">OpenText
 								<ul class="list-group-flush custom-color-2">
@@ -332,7 +332,7 @@
 	<div class="row fade-right-container" style="--delay: 0.9s;">
 		<div class="col-sm">
 			<section class="resume-section">
-				<p class="section-title text-secondary bold">Skills</p>
+				<p class="section-title text-dark bold">Skills</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item  mb-0 p-0 custom-color-2">Backend
 							<ul class="list-group-flush custom-color-2">
@@ -373,7 +373,7 @@
 		</div>
 		<div class="col-sm">
 			<section class="resume-section"> 
-				<p class="section-title text-secondary bold custom-color-2">Education</p>
+				<p class="section-title text-dark bold custom-color-2">Education</p>
 					<ul class="list-group list-group-flush custom-color-2">
 						<li class="list-group-item  mb-0 p-0 custom-color-2">Bachelor of Engineering
 							<ul class="list-group-flush custom-color-2">
@@ -452,7 +452,7 @@
 	<div class="row fade-right-container" style="--delay: 1.2s;">
 		<div class="col-sm">
 			<section class="resume-section">
-				<p class="section-title text-secondary bold custom-color-2">Achievements</p>
+				<p class="section-title text-dark bold custom-color-2">Achievements</p>
 					<ul class="list-group list-group-flush custom-color-2">
 						<li class="list-group-item  mb-0 p-0 custom-color-2">Application Certification Completion (Recognition)
 							<ul class="list-group-flush custom-color-2">
@@ -493,7 +493,7 @@
 		</div>
 		<div class="col-sm">
 			<section class="resume-section">
-				<p class="section-title text-secondary bold custom-color-2">Contribution</p>
+				<p class="section-title text-dark bold custom-color-2">Contribution</p>
 					<ul class="list-group list-group-flush custom-color-2">
 						<li class="list-group-item  mb-0 p-0 custom-color-2">Open-Source contribution 
 							<a href="https://play.google.com/store/apps/details?id=org.j_keepass" class="text-decoration-none d-print-none"> 
@@ -527,7 +527,7 @@
 	<div class="row mt-3 fade-right-container" style="--delay: 1.5s;">
 		<div class="col">
 			<section class="resume-section">
-				<p class="section-title text-secondary bold">Projects</p>
+				<p class="section-title text-dark bold">Projects</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item  mb-0 p-0 custom-color-2">BizManager 
 							<span class="position-absolute top-0 end-0 fw-light small mb-0 custom-color-2">06/2018 – present</span>
@@ -602,7 +602,7 @@
 		</div>
 	</div>
 	<section class="resume-section fade-right-container" style="--delay: 1.8s;">
-		<p class="section-title d-print-none">Other Details</p>
+		<p class="section-title d-print-none text-dark bold">Other Details</p>
 		<div class="card-group border-0 d-print-none custom-color-2">
 			<div class="card border-0">
 				<ul class="list-group list-group-flush custom-color-2">
@@ -654,7 +654,7 @@
 	</section>
 	<section class="resume-section d-none d-print-block">
 	<br/> <br/> <br/><br/> <br/> <br/><br/> <br/> <br/> <br/> <br/> <br/> <br/>
-		<p class="section-title">Declaration</p>
+		<p class="section-title text-dark bold">Declaration</p>
 		<br/> <br/> <br/>
 		<p class="text-end">Jayesh Ganatra</p>
 	</section>	
