--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	
 	.small {
 	  font-family: "Quicksand", sans-serif;
-	  font-weight: 200;
+	  font-weight: 300;
 	  font-style: normal;
 	}
 
@@ -149,7 +149,7 @@
 			flex: 0 0 33.333333%;
 			max-width: 33.333333%;
 		}
-		.display-3, .fw-light {
+		.display-3, . {
 			color:black;
 		}
 
@@ -265,24 +265,24 @@
 									</p>
 									<div class="row custom-color-2">
 										<p class="col-8 mb-0">
-											<label class="text-start fw-light small">
+											<label class="text-start  small">
 												03/2023 –
 											</label>
 											<span class="p-1 badge bg-success text-white">Present</span> &nbsp; &bull; &nbsp;
-											<label class="text-start fw-light small" id="currentCompanyExperience">
+											<label class="text-start  small" id="currentCompanyExperience">
 											</label>
 										</p>
-										<p class="col-4 text-end fw-light small mb-0">
+										<p class="col-4 text-end  small mb-0">
 											Bengaluru, India
 										</p>
 									</div>
 									<p class="mb-0 mt-2 border-top border-1">Senior Software Engineer
 									</p>
 									<div class="row custom-color-2">
-										<p class="col-8 text-start fw-light small mb-0">
+										<p class="col-8 text-start  small mb-0">
 											06/2018 – 03/2023 &nbsp; &bull; &nbsp; 4 years 10 months
 										</p>
-										<p class="col-4 text-end fw-light small mb-0">
+										<p class="col-4 text-end  small mb-0">
 											Bengaluru, India
 										</p>
 									</div>
@@ -297,10 +297,10 @@
 									<p class=" mb-0">Software Engineer
 									</p>
 									<div class="row custom-color-2">
-										<p class="col-8 text-start fw-light small mb-0">
+										<p class="col-8 text-start  small mb-0">
 											06/2016 – 06/2018 &nbsp; &bull; &nbsp; 2 years
 										</p>
-										<p class="col-4 text-end fw-light small mb-0">
+										<p class="col-4 text-end  small mb-0">
 											Bengaluru, India
 										</p>
 									</div>
@@ -315,10 +315,10 @@
 									<p class=" mb-0">Software Engineer
 									</p>
 									<div class="row custom-color-2">
-										<p class="col-8 text-start fw-light small mb-0">
+										<p class="col-8 text-start  small mb-0">
 											07/2013 – 06/2016 &nbsp; &bull; &nbsp; 3 years
 										</p>
-										<p class="col-4 text-end fw-light small mb-0">
+										<p class="col-4 text-end  small mb-0">
 											Bengaluru, India
 										</p>
 									</div>
@@ -337,7 +337,7 @@
 						<li class="list-group-item  mb-0 p-0 custom-color-2">Backend
 							<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
-									<p class="fw-light small mb-0">Java / J2EE, Spring Core, Spring MVC, Spring Boot, JPA, Hibernate, REST and SOAP web service</p>
+									<p class=" small mb-0">Java / J2EE, Spring Core, Spring MVC, Spring Boot, JPA, Hibernate, REST and SOAP web service</p>
 								</li>
 							</ul>
 						</li>
@@ -346,7 +346,7 @@
 						<li class="list-group-item  mb-0 p-0 custom-color-2">Frontend
 							<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
-									<p class="fw-light small mb-0">HTML, JSP, Servlet, JavaScript/ jQuery, Android</p>
+									<p class=" small mb-0">HTML, JSP, Servlet, JavaScript/ jQuery, Android</p>
 								</li>
 							</ul>
 						</li>
@@ -355,7 +355,7 @@
 						<li class="list-group-item  mb-0 p-0 custom-color-2">Database
 								<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
-									<p class="fw-light small mb-0">MSSQL, MySQL, Oracle 12c, MongoDB, Other relational databases</p>
+									<p class=" small mb-0">MSSQL, MySQL, Oracle 12c, MongoDB, Other relational databases</p>
 								</li>
 							</ul>
 						</li>
@@ -364,7 +364,7 @@
 						<li class="list-group-item  mb-0 p-0 custom-color-2">Version Control and Infra Tech
 								<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
-									<p class="fw-light small mb-0">Maven, Apache Ant, Git, Mercurial, TeamCity, Jenkins, Sonar, Microservices, Docker, Kubernetes, Apache Kafka</p>
+									<p class=" small mb-0">Maven, Apache Ant, Git, Mercurial, TeamCity, Jenkins, Sonar, Microservices, Docker, Kubernetes, Apache Kafka</p>
 								</li>
 							</ul>
 						</li>
@@ -379,18 +379,18 @@
 							<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
 									<div class="row">
-										<p class="col-6 text-start fw-light small mb-0">
+										<p class="col-6 text-start  small mb-0">
 											62.13%
 										</p>
-										<p class="col-6 text-end fw-light small mb-0">
+										<p class="col-6 text-end  small mb-0">
 											06/2009 – 05/2012
 										</p>
 									</div>
 									<div class="row">
-										<p class="col-8 text-start fw-light small mb-0">
+										<p class="col-8 text-start  small mb-0">
 											North Maharashtra University
 										</p>
-										<p class="col-4 text-end fw-light small mb-0">
+										<p class="col-4 text-end  small mb-0">
 											Jalgaon, India
 										</p>
 									</div>
@@ -403,18 +403,18 @@
 								<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
 									<div class="row">
-										<p class="col-6 text-start fw-light small mb-0">
+										<p class="col-6 text-start  small mb-0">
 											72.60%
 										</p>
-										<p class="col-6 text-end fw-light small mb-0">
+										<p class="col-6 text-end  small mb-0">
 											06/2006 – 05/2009
 										</p>
 									</div>
 									<div class="row">
-										<p class="col-8 text-start fw-light small mb-0">
+										<p class="col-8 text-start  small mb-0">
 											Maharashtra State Board of Technical  Education University
 										</p>
-										<p class="col-4 text-end fw-light small mb-0">
+										<p class="col-4 text-end  small mb-0">
 											Mumbai, India
 										</p>
 									</div>
@@ -427,18 +427,18 @@
 								<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
 									<div class="row custom-color-2">
-										<p class="col-6 text-start fw-light small mb-0">
+										<p class="col-6 text-start  small mb-0">
 											76.13%
 										</p>
-										<p class="col-6 text-end fw-light small mb-0">
+										<p class="col-6 text-end  small mb-0">
 											2006
 										</p>
 									</div>
 									<div class="row custom-color-2">
-										<p class="col-8 text-start fw-light small mb-0">
+										<p class="col-8 text-start  small mb-0">
 											Maharashtra State Secondary &amp; Higher Secondary Education University
 										</p>
-										<p class="col-4 text-end fw-light small mb-0">
+										<p class="col-4 text-end  small mb-0">
 											Mumbai, India
 										</p>
 									</div>
@@ -458,14 +458,14 @@
 							<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
 									<div class="row custom-color-2">
-										<p class="col-8 text-start fw-light small mb-0">
+										<p class="col-8 text-start  small mb-0">
 											OpenText
 										</p>
-										<p class="col-4 text-end fw-light small mb-0">
+										<p class="col-4 text-end  small mb-0">
 											31/05/2024
 										</p>
 									</div>
-									<p class="fw-light small mt-1 mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AS4 CEF common profile Certification awarded to BizManager, which was a long-awaited certification, signifies the company's proficiency in adhering to the AS4 standards, ensuring compliance with regulatory requirements for our partners, customers, and stakeholders.
+									<p class=" small mt-1 mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AS4 CEF common profile Certification awarded to BizManager, which was a long-awaited certification, signifies the company's proficiency in adhering to the AS4 standards, ensuring compliance with regulatory requirements for our partners, customers, and stakeholders.
 									</p>
 								</li>
 							</ul>
@@ -476,14 +476,14 @@
 							<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
 									<div class="row custom-color-2">
-										<p class="col-8 text-start fw-light small mb-0">
+										<p class="col-8 text-start  small mb-0">
 											Wipro Technologies
 										</p>
-										<p class="col-4 text-end fw-light small mb-0">
+										<p class="col-4 text-end  small mb-0">
 											30/11/2017
 										</p>
 									</div>
-									<p class="fw-light small mt-1 mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Performance improvement to search module development in Way2Go product, delivering breakthrough 45% performance enhancement.
+									<p class=" small mt-1 mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Performance improvement to search module development in Way2Go product, delivering breakthrough 45% performance enhancement.
 									</p>
 								</li>
 							</ul>
@@ -505,14 +505,14 @@
 							<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
 									<div class="row custom-color-2">
-										<p class="col-6 text-start fw-light small mb-0">
+										<p class="col-6 text-start  small mb-0">
 											Password Management App
 										</p>
-										<p class="col-6 text-end fw-light small mb-0">
+										<p class="col-6 text-end  small mb-0">
 											Native Android Application
 										</p>
 									</div>
-									<p class="fw-light small mt-1 mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Professional-grade security application integrating KeePass library with intuitive Material Design interface, officially recognized on project platform.
+									<p class=" small mt-1 mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Professional-grade security application integrating KeePass library with intuitive Material Design interface, officially recognized on project platform.
 									</p>
 								</li>
 							</ul>
@@ -530,39 +530,39 @@
 				<p class="section-title text-dark bold">Projects</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item  mb-0 p-0 custom-color-2">BizManager 
-							<span class="position-absolute top-0 end-0 fw-light small mb-0 custom-color-2">06/2018 – present</span>
+							<span class="position-absolute top-0 end-0  small mb-0 custom-color-2">06/2018 – present</span>
 							<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
-									<p class="fw-light small mb-0">Information Management domain
+									<p class=" small mb-0">Information Management domain
 									</p>
-									<p class="fw-light mt-1 small">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A B2B application that allows customers to configure and manage file transfers between applications using several protocols, such as PEPPOL, AS4/AS2, FTP, SFTP, HTTPS, and SMTP, as well as produce reports and audit transactions involving file transfers. Administrators can manage users, services and gateways, password policies, and download service logs. The application provides Administrator users and non-admin users whose access can be defined according to their role.
+									<p class=" mt-1 small">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A B2B application that allows customers to configure and manage file transfers between applications using several protocols, such as PEPPOL, AS4/AS2, FTP, SFTP, HTTPS, and SMTP, as well as produce reports and audit transactions involving file transfers. Administrators can manage users, services and gateways, password policies, and download service logs. The application provides Administrator users and non-admin users whose access can be defined according to their role.
 									</p>
-									<p class="fw-light small mt-1 mb-0">Role:
+									<p class=" small mt-1 mb-0">Role:
 									</p>
-									<p class="fw-light small mt-1 mb-0">
+									<p class=" small mt-1 mb-0">
 									&nbsp;&nbsp;&nbsp;Lead Software Engineer  &nbsp; &bull; &nbsp; 10 members
 									</p>
-									<p class="fw-light small mt-1 mb-0">Responsibilities:
+									<p class=" small mt-1 mb-0">Responsibilities:
 									</p>
-									<p class="fw-light mt-1 small mb-0 ml-1">
+									<p class=" mt-1 small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Mentoring team members and holding developer meetings
 									</p>
-									<p class="fw-light small mb-0 ml-1">
+									<p class=" small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Removing blockers and facilitating regular technical touch-point meetings with other teams. 
 									</p>
-									<p class="fw-light small mb-0 ml-1">
+									<p class=" small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Enhanced monitoring module to identify crash and performance related issues. 
 									</p>
-									<p class="fw-light small mb-0 ml-1">
+									<p class=" small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;R&amp;D on new frameworks &amp; features to enhance product capabilities. 
 									</p>
-									<p class="fw-light small mb-0 ml-1">
+									<p class=" small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Design solutions for complex change requests (CRs) and develop new modules. 
 									</p>
-									<p class="fw-light small mb-0 ml-1">
+									<p class=" small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Responsible for production bug troubleshoot and fixes. 
 									</p>
-									<p class="fw-light small mb-0 ml-1">
+									<p class=" small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Leading demos.
 									</p>
 								</li>
@@ -571,27 +571,27 @@
 					</ul>
 					<ul class="list-group list-group-flush custom-color-2">
 						<li class="list-group-item  mb-0 p-0 custom-color-2">Way2Go 
-								<span class=" position-absolute top-0 end-0 fw-light small mb-0">06/2016 – 06/2018</span>
+								<span class=" position-absolute top-0 end-0  small mb-0">06/2016 – 06/2018</span>
 								<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
-									<p class="fw-light small mb-0">Travel & Expense domain
+									<p class=" small mb-0">Travel & Expense domain
 									</p>
-									<p class="fw-light mt-1 small">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; A B2B product to ease the corporate organization’s travel and expense division with ERP and Global Distribution System (GDS) integration. The product also features the data analysis portal to provide various ways to highlight the travel and expense reports. Large and small organizations can easily track business travel and expense anytime and anywhere.
+									<p class=" mt-1 small">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; A B2B product to ease the corporate organization’s travel and expense division with ERP and Global Distribution System (GDS) integration. The product also features the data analysis portal to provide various ways to highlight the travel and expense reports. Large and small organizations can easily track business travel and expense anytime and anywhere.
 									</p>
-									<p class="fw-light small mt-1 mb-0">Role:
+									<p class=" small mt-1 mb-0">Role:
 									</p>
-									<p class="fw-light small mt-1 mb-0 ml-1">
+									<p class=" small mt-1 mb-0 ml-1">
 									&nbsp;&nbsp;&nbsp;Developer (Team Member &nbsp; &bull; &nbsp; 12 members)
 									</p>
-									<p class="fw-light small mt-1 mb-0">Responsibilities:
+									<p class=" small mt-1 mb-0">Responsibilities:
 									</p>
-									<p class="fw-light mt-1 small mb-0 ml-1">
+									<p class=" mt-1 small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Analyze and discuss the business requirements.
 									</p>
-									<p class="fw-light small mb-0 ml-1">
+									<p class=" small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Responsible for the feature development and implementation.
 									</p>
-									<p class="fw-light small mb-0 ml-1">
+									<p class=" small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Responsible for bug fixing and troubleshooting.
 									</p>
 								</li>
@@ -609,7 +609,7 @@
 					<li class="list-group-item  mb-0 p-0 custom-color-2">Location
 								<ul class="list-group-flush custom-color-2">
 								<li class="list-group-item border-start custom-color-2">
-									<p class="fw-light  mb-0">Bengaluru, India</p>
+									<p class="  mb-0">Bengaluru, India</p>
 								</li>
 						</ul>
 					</li>
@@ -620,7 +620,7 @@
 					<li class="list-group-item  mb-0 p-0 custom-color-2">LinkedIn
 						<ul class="list-group-flush custom-color-2">
 							<li class="list-group-item border-start custom-color-2">
-								<p class="fw-light  mb-0">
+								<p class="  mb-0">
 									<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none d-print-none"> 
 										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-linkedin" viewBox="0 0 16 16">
 											<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
@@ -637,7 +637,7 @@
 					<li class="list-group-item  mb-0 p-0 custom-color-2">Resume in PDF
 						<ul class="list-group-flush custom-color-2">
 							<li class="list-group-item border-start custom-color-2">
-								<p class="fw-light  mb-0">
+								<p class="  mb-0">
 									<a href="Jayesh_Ganatra_Resume.pdf"class="text-decoration-none"> 
 										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 										  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
