--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
    <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
 
 
   <style>
   
     .regular {
-	  font-family: "Quicksand", sans-serif;
+	  font-family: "Comfortaa", sans-serif;
 	  font-weight: 400;
 	  font-style: normal;
 	}
 
 	.medium {
-	  font-family: "Quicksand", sans-serif;
+	  font-family: "Comfortaa", sans-serif;
 	  font-weight: 500;
 	  font-style: normal;
 	}
 
 	.bold {
-	  font-family: "Quicksand", sans-serif;
+	  font-family: "Comfortaa", sans-serif;
 	  font-weight: 700;
 	  font-style: normal;
 	}
 	
 	.small {
-	  font-family: "Quicksand", sans-serif;
+	  font-family: "Comfortaa", sans-serif;
 	  font-weight: 300;
 	  font-style: normal;
 	}
