--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
-
+	
   <style>
   
     .regular {
@@ -38,7 +39,7 @@
 	}
 
 	.bold {
-	  font-family: "Comfortaa", sans-serif;
+	  font-family: "Playfair Display", sans-serif;
 	  font-weight: 700;
 	  font-style: normal;
 	}
