--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       color: var(--bs-body-color);
     }
 	.body-color {
-		background-color: #e2e2e2;
+		background-color: #e5e8eb;
 	}
     .resume-section {
       padding: 1rem 0;
