--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	html {
 	  font-size: 13.176471px;
-	  background-color: #e2e2e2;
+	  background-color: #e6ebe5;
 	}
 	
 
@@ -80,7 +80,7 @@
       color: var(--bs-body-color);
     }
 	.body-color {
-		background-color: #e5e8eb;
+		background-color: #e6ebe5;
 	}
     .resume-section {
       padding: 1rem 0;
