--- a/index.html
+++ b/index.html
@@ -85,11 +85,18 @@
     .resume-section {
       padding: 1rem 0;
     }
+	
     .section-title {
       border-bottom: 2px solid #957C3D;
       margin-bottom: 1rem;
       padding-bottom: 0.5rem;
+	  text-transform: uppercase;	  
     }
+	.custom-highlighter{
+	  text-decoration-line: underline;
+	  text-decoration-color: green;  
+	  text-decoration-style: wavy; 
+	}
 	.custom-color-2 {
 		background-color : #e6ebe5;
 	}
@@ -238,7 +245,7 @@
 			<section class="resume-section">
 				<p class="section-title text-dark bold">Summary
 				</p>
-				<p class="lh-sm">Lead Software Engineer with <span id="totalExperience">12+ years</span> of experience designing and delivering enterprise-grade solutions across diverse industries. Skilled in translating complex business requirements into scalable, secure, and maintainable architectures using Java, microservices, and cloud-native technologies.
+				<p class="lh-sm"><span class="p-1 custom-highlighter">Lead Software Engineer</span> with <span id="totalExperience">12+ years</span> of experience designing and delivering enterprise-grade solutions across diverse industries. Skilled in translating complex business requirements into scalable, secure, and maintainable architectures using Java, microservices, and cloud-native technologies.
 				</p>
 				<p class="lh-sm">Passionate about system design, performance optimization, and driving architectural decisions that align with long-term product vision. On a focused path toward becoming a Technology Architect, with a strong foundation in integration protocols, DevOps practices, and cross-functional collaboration.
 				</p>
@@ -269,7 +276,7 @@
 											<label class="text-start  small">
 												03/2023 –
 											</label>
-											<span class="p-1 badge bg-success text-white">Present</span> &nbsp; &bull; &nbsp;
+											<span class="p-1 custom-highlighter">Present</span> &nbsp; &bull; &nbsp;
 											<label class="text-start  small" id="currentCompanyExperience">
 											</label>
 										</p>
