--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
     .resume-section {
       padding: 1rem 0;
     }
+	.resume-section:hover{
+		opacity: 1 !important;
+		letter-spacing: 1px;
+		font-weight: 700 !important;
+		transition: all 0.4s ease 0s;
+	}
+	
+	.customizedContainer:hover .resume-section {
+		  opacity: 0.3; /* Reduce opacity of all boxes when container is hovered */
+	}
+
 	
     .section-title {
       border-bottom: 2px solid #957C3D;
