--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     }
 	.custom-highlighter{
 	  text-decoration-line: underline;
-	  text-decoration-color: green;  
+	  text-decoration-color: #9DD6AD;  
 	  text-decoration-style: wavy; 
 	}
 	.custom-color-2 {
@@ -256,7 +256,7 @@
 			<section class="resume-section">
 				<p class="section-title text-dark bold">Summary
 				</p>
-				<p class="lh-sm"><span class="p-1 custom-highlighter">Lead Software Engineer</span> with <span id="totalExperience">12+ years</span> of experience designing and delivering enterprise-grade solutions across diverse industries. Skilled in translating complex business requirements into scalable, secure, and maintainable architectures using Java, microservices, and cloud-native technologies.
+				<p class="lh-sm"><span class="custom-highlighter bold">Lead Software Engineer</span> with <span id="totalExperience">12+ years</span> of experience designing and delivering enterprise-grade solutions across diverse industries. Skilled in translating complex business requirements into scalable, secure, and maintainable architectures using Java, microservices, and cloud-native technologies.
 				</p>
 				<p class="lh-sm">Passionate about system design, performance optimization, and driving architectural decisions that align with long-term product vision. On a focused path toward becoming a Technology Architect, with a strong foundation in integration protocols, DevOps practices, and cross-functional collaboration.
 				</p>
@@ -287,8 +287,8 @@
 											<label class="text-start  small">
 												03/2023 –
 											</label>
-											<span class="p-1 custom-highlighter">Present</span> &nbsp; &bull; &nbsp;
-											<label class="text-start  small" id="currentCompanyExperience">
+											<span class="custom-highlighter bold">Present</span> &nbsp; &bull; &nbsp;
+											<label class="text-start small" id="currentCompanyExperience">
 											</label>
 										</p>
 										<p class="col-4 text-end  small mb-0">
