--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	}
 	
 	.customizedContainer:hover .resume-section {
-		  opacity: 0.3; /* Reduce opacity of all boxes when container is hovered */
+		opacity: 0.3; /* Reduce opacity of all boxes when container is hovered */
 	}
 
 	
@@ -101,12 +101,12 @@
       border-bottom: 2px solid #957C3D;
       margin-bottom: 1rem;
       padding-bottom: 0.5rem;
-	  text-transform: uppercase;	  
     }
 	.custom-highlighter{
 	  text-decoration-line: underline;
-	  text-decoration-color: #9DD6AD;  
+	  text-decoration-color: #957C3D;  
 	  text-decoration-style: wavy; 
+	  letter-spacing: 1px;
 	}
 	.custom-color-2 {
 		background-color : #e6ebe5;
@@ -287,8 +287,8 @@
 											<label class="text-start  small">
 												03/2023 –
 											</label>
-											<span class="custom-highlighter bold">Present</span> &nbsp; &bull; &nbsp;
-											<label class="text-start small" id="currentCompanyExperience">
+											<span class="custom-highlighter bold">Present</span>
+											<label class="text-start small" id="currentCompanyExperience">&nbsp; &bull; &nbsp;
 											</label>
 										</p>
 										<p class="col-4 text-end  small mb-0">
