--- a/index.html
+++ b/index.html
@@ -103,10 +103,8 @@
       padding-bottom: 0.5rem;
     }
 	.custom-highlighter{
-	  text-decoration-line: underline;
-	  text-decoration-color: #957C3D;  
-	  text-decoration-style: wavy; 
 	  letter-spacing: 1px;
+	  color: #957C3D;
 	}
 	.custom-color-2 {
 		background-color : #e6ebe5;
