--- a/index.html
+++ b/index.html
@@ -80,20 +80,19 @@
       color: var(--bs-body-color);
     }
 	.body-color {
-		background-color: #e6ebe5;
+		background-color: #EAE7DD;
 	}
     .resume-section {
       padding: 1rem 0;
     }
 	.resume-section:hover{
 		opacity: 1 !important;
-		letter-spacing: 1px;
 		font-weight: 700 !important;
 		transition: all 0.4s ease 0s;
 	}
 	
 	.customizedContainer:hover .resume-section {
-		opacity: 0.3; /* Reduce opacity of all boxes when container is hovered */
+		opacity: 0.5; /* Reduce opacity of all boxes when container is hovered */
 	}
 
 	
